api: add type-specific properties to forward destinations
