# api/openapi.yaml
@@ -47,6 +47,14 @@ components:
         - $ref: "#/components/schemas/PathTrackCodecPropsG711"
         - $ref: "#/components/schemas/PathTrackCodecPropsLPCM"
 
+    ForwardDestTypeSpecific:
+      oneOf:
+        - $ref: "#/components/schemas/ForwardDestTypeSpecificRTMP"
+        - $ref: "#/components/schemas/ForwardDestTypeSpecificMoQ"
+        - $ref: "#/components/schemas/ForwardDestTypeSpecificRTSP"
+        - $ref: "#/components/schemas/ForwardDestTypeSpecificSRT"
+        - $ref: "#/components/schemas/ForwardDestTypeSpecificWebRTC"
+
     ErrorStatus:
       type: string
       enum:
@@ -1475,6 +1483,11 @@ components:
           $ref: "#/components/schemas/ForwardDestState"
         type:
           $ref: "#/components/schemas/ForwardDestType"
+        typeSpecific:
+          type: object
+          allOf:
+            - $ref: "#/components/schemas/ForwardDestTypeSpecific"
+          nullable: true
 
     ForwardDestList:
       type: object
@@ -1489,6 +1502,338 @@ components:
         pageCount:
           type: integer
           format: int64
+
+    ForwardDestTypeSpecificRTMP:
+      type: object
+      properties:
+        inboundBytes:
+          type: integer
+          format: uint64
+        outboundBytes:
+          type: integer
+          format: uint64
+        remoteAddr:
+          type: string
+
+    ForwardDestTypeSpecificMoQ:
+      type: object
+      properties:
+        outboundBytes:
+          type: integer
+          format: uint64
+        transport:
+          type: string
+
+    ForwardDestTypeSpecificRTSP:
+      type: object
+      properties:
+        inboundBytes:
+          type: integer
+          format: uint64
+          description: inbound bytes
+        inboundRTCPPackets:
+          type: integer
+          format: uint64
+          description: inbound RTCP packets correctly received and processed
+        inboundRTCPPacketsInError:
+          type: integer
+          format: uint64
+          description: inbound RTCP packets that could not be processed
+        inboundRTPPackets:
+          type: integer
+          format: uint64
+          description: inbound RTP packets correctly received and processed
+        inboundRTPPacketsInError:
+          type: integer
+          format: uint64
+          description: inbound RTP packets that could not be processed
+        inboundRTPPacketsJitter:
+          type: number
+          format: double
+          description: mean jitter of inbound RTP packets
+        inboundRTPPacketsLost:
+          type: integer
+          format: uint64
+          description: lost inbound RTP packets
+        outboundBytes:
+          type: integer
+          format: uint64
+          description: outbound bytes
+        outboundRTCPPackets:
+          type: integer
+          format: uint64
+          description: outbound RTCP packets
+        outboundRTPPackets:
+          type: integer
+          format: uint64
+          description: outbound RTP packets
+        outboundRTPPacketsReportedLost:
+          type: integer
+          format: uint64
+          description: outbound RTP packets reported as lost by the remote receiver
+        remoteAddr:
+          type: string
+        transport:
+          type: string
+
+    ForwardDestTypeSpecificSRT:
+      type: object
+      properties:
+        byteMSS:
+          type: integer
+          format: uint64
+          description: Maximum Segment Size (MSS), in bytes
+        bytesAvailReceiveBuf:
+          type: integer
+          format: uint64
+          description: The available space in the receiver's buffer, in bytes
+        bytesAvailSendBuf:
+          type: integer
+          format: uint64
+          description: The available space in the sender's buffer, in bytes
+        bytesReceiveBuf:
+          type: integer
+          format: uint64
+          description: Instantaneous (current) value of packetsRcvBuf, expressed in bytes, including payload and all headers (IP, TCP, SRT)
+        bytesReceived:
+          type: integer
+          format: uint64
+          description: Same as packetsReceived, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesReceivedBelated:
+          type: integer
+          format: uint64
+          description: Same as PacketsReceivedBelated, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesReceivedDrop:
+          type: integer
+          format: uint64
+          description: Same as packetsReceivedDrop, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesReceivedLoss:
+          type: integer
+          format: uint64
+          description: Same as packetsReceivedLoss, but expressed in bytes, including payload and all the headers (IP, TCP, SRT), bytes for the presently missing (either reordered or lost) packets' payloads are estimated based on the average packet size
+        bytesReceivedRetrans:
+          type: integer
+          format: uint64
+          description: Same as packetsReceivedRetrans, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesReceivedUndecrypt:
+          type: integer
+          format: uint64
+          description: Same as packetsReceivedUndecrypt, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesReceivedUnique:
+          type: integer
+          format: uint64
+          description: Same as packetsReceivedUnique, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesRetrans:
+          type: integer
+          format: uint64
+          description: Same as packetsRetrans, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesSendBuf:
+          type: integer
+          format: uint64
+          description: Instantaneous (current) value of packetsSndBuf, but expressed in bytes, including payload and all headers (IP, TCP, SRT)
+        bytesSendDrop:
+          type: integer
+          format: uint64
+          description: Same as packetsSendDrop, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesSent:
+          type: integer
+          format: uint64
+          description: Same as packetsSent, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        bytesSentUnique:
+          type: integer
+          format: uint64
+          description: Same as packetsSentUnique, but expressed in bytes, including payload and all the headers (IP, TCP, SRT)
+        mbpsLinkCapacity:
+          type: number
+          format: double
+          description: Estimated capacity of the network link, in Mbps
+        mbpsMaxBW:
+          type: number
+          format: double
+          description: Transmission bandwidth limit, in Mbps
+        mbpsReceiveRate:
+          type: number
+          format: double
+          description: Current receiving bandwidth, in Mbps
+        mbpsSendRate:
+          type: number
+          format: double
+          description: Current transmission bandwidth, in Mbps
+        msRTT:
+          type: number
+          format: double
+          description: Smoothed round-trip time (SRTT), an exponentially-weighted moving average (EWMA) of an endpoint's RTT samples, in milliseconds
+        msReceiveBuf:
+          type: integer
+          format: uint64
+          description: The timespan (msec) of acknowledged packets in the receiver's buffer
+        msReceiveTsbPdDelay:
+          type: integer
+          format: uint64
+          description: Timestamp-based Packet Delivery Delay value set on the socket via SRTO_RCVLATENCY or SRTO_LATENCY
+        msSendBuf:
+          type: integer
+          format: uint64
+          description: The timespan (msec) of packets in the sender's buffer (unacknowledged packets)
+        msSendTsbPdDelay:
+          type: integer
+          format: uint64
+          description: Timestamp-based Packet Delivery Delay value of the peer
+        outboundFramesDiscarded:
+          type: integer
+          format: uint64
+        packetsFlightSize:
+          type: integer
+          format: uint64
+          description: The number of packets in flight
+        packetsFlowWindow:
+          type: integer
+          format: uint64
+          description: The maximum number of packets that can be "in flight"
+        packetsReceiveBuf:
+          type: integer
+          format: uint64
+          description: The number of acknowledged packets in receiver's buffer
+        packetsReceived:
+          type: integer
+          format: uint64
+          description: The total number of received DATA packets, including retransmitted packets
+        packetsReceivedACK:
+          type: integer
+          format: uint64
+          description: The total number of received ACK (Acknowledgement) control packets
+        packetsReceivedAvgBelatedTime:
+          type: integer
+          format: uint64
+          description: Accumulated difference between the current time and the time-to-play of a packet that is received late
+        packetsReceivedBelated:
+          type: integer
+          format: uint64
+        packetsReceivedDrop:
+          type: integer
+          format: uint64
+          description: The total number of dropped by the SRT receiver and, as a result, not delivered to the upstream application DATA packets
+        packetsReceivedKM:
+          type: integer
+          format: uint64
+          description: The total number of received KM (Key Material) control packets
+        packetsReceivedLoss:
+          type: integer
+          format: uint64
+          description: The total number of SRT DATA packets detected as presently missing (either reordered or lost) at the receiver side
+        packetsReceivedLossRate:
+          type: number
+          format: double
+          description: Percentage of retransmitted data vs. received data
+        packetsReceivedNAK:
+          type: integer
+          format: uint64
+          description: The total number of received NAK (Negative Acknowledgement) control packets
+        packetsReceivedRetrans:
+          type: integer
+          format: uint64
+          description: The total number of retransmitted packets registered at the receiver side
+        packetsReceivedUndecrypt:
+          type: integer
+          format: uint64
+          description: The total number of packets that failed to be decrypted at the receiver side
+        packetsReceivedUnique:
+          type: integer
+          format: uint64
+          description: The total number of unique original, retransmitted or recovered by the packet filter DATA packets received in time, decrypted without errors and, as a result, scheduled for delivery to the upstream application by the SRT receiver.
+        packetsReorderTolerance:
+          type: integer
+          format: uint64
+          description: Instant value of the packet reorder tolerance
+        packetsRetrans:
+          type: integer
+          format: uint64
+          description: The total number of retransmitted packets sent by the SRT sender
+        packetsSendBuf:
+          type: integer
+          format: uint64
+          description: The number of packets in the sender's buffer that are already scheduled for sending or even possibly sent, but not yet acknowledged
+        packetsSendDrop:
+          type: integer
+          format: uint64
+          description: The total number of dropped by the SRT sender DATA packets that have no chance to be delivered in time
+        packetsSendLoss:
+          type: integer
+          format: uint64
+          description: The total number of data packets considered or reported as lost at the sender side. Does not correspond to the packets detected as lost at the receiver side.
+        packetsSendLossRate:
+          type: number
+          format: double
+          description: Percentage of resent data vs. sent data
+        packetsSent:
+          type: integer
+          format: uint64
+          description: The total number of sent DATA packets, including retransmitted packets
+        packetsSentACK:
+          type: integer
+          format: uint64
+          description: The total number of sent ACK (Acknowledgement) control packets
+        packetsSentKM:
+          type: integer
+          format: uint64
+          description: The total number of sent KM (Key Material) control packets
+        packetsSentNAK:
+          type: integer
+          format: uint64
+          description: The total number of sent NAK (Negative Acknowledgement) control packets
+        packetsSentUnique:
+          type: integer
+          format: uint64
+          description: The total number of unique DATA packets sent by the SRT sender
+        remoteAddr:
+          type: string
+        usPacketsSendPeriod:
+          type: number
+          format: double
+          description: Current minimum time interval between which consecutive packets are sent, in microseconds
+        usSndDuration:
+          type: integer
+          format: uint64
+          description: The total accumulated time in microseconds, during which the SRT sender has some data to transmit, including packets that have been sent, but not yet acknowledged
+
+    ForwardDestTypeSpecificWebRTC:
+      type: object
+      properties:
+        inboundBytes:
+          type: integer
+          format: uint64
+        inboundRTCPPackets:
+          type: integer
+          format: uint64
+        inboundRTPPackets:
+          type: integer
+          format: uint64
+        inboundRTPPacketsJitter:
+          type: number
+          format: double
+        inboundRTPPacketsLost:
+          type: integer
+          format: uint64
+        localCandidate:
+          type: string
+        outboundBytes:
+          type: integer
+          format: uint64
+        outboundFramesDiscarded:
+          type: integer
+          format: uint64
+        outboundRTCPPackets:
+          type: integer
+          format: uint64
+        outboundRTPPackets:
+          type: integer
+          format: uint64
+        peerConnectionEstablished:
+          type: boolean
+        remoteAddr:
+          type: string
+        remoteCandidate:
+          type: string
 
     Recording:
       type: object
